# SubtitleEditLite

./: CMakeLists.txt  DEMO.md  PACKAGING.md  POINT_SYNC_GUIDE.md  README.md  RELEASE_CHECKLIST.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  package_macos.sh  package_windows.bat  pointsyncdialog.cpp  pointsyncdialog.h  reference_sample.srt  subtitle.cpp  subtitle.h  test_gbk.srt  test_packaging.sh  test_sample.srt  test_utf8.srt
.github/workflows/: build-release.yml
